# FIT

./: .gitignore
IAL/ial_2018_du1/: Makefile
IAL/ial_2018_du2/: c402.c
IBT/: README.md
IBT/ITT/: ITT.tex  Makefile
IBT/bc_src/: README.md  data_convertor.py  visualize.py
IBT/data/: Emotion_Gender.csv  Event_Related_Features.csv  emotion_to_presentation.csv
IBT/latex/: fitthesis.cls  navrh_reseni.tex  (+2 more)
IFJ/: CMakeLists.txt
IFJ/IFJ2018/: dynamic_string.h  err_code.h  generator.c  generator.h  parser.c  parser.h  rozdeleni  symtable.c  symtable.h  tlist.c
IFJ/odevzdana_verze/: Makefile  dynamic_string.c  err_code.c  gen_stack.c  gen_stack.h  main.c  parser.c  rstring.c  rstring.h  scanner.c  scanner.h  tlist.h  token.c  token.h  tokenstack.c  tokenstack.h
IFJ/sdilena_verze_1.1/: Makefile  RString.c  RString.h  Tlist.c  Tlist.h  Token.c  Token.h  ifj18.txt  scanner.c  scanner.h  vystupTest  vystupTest.c
IPP/: interpret.py  out.html  test.php
ISA/: Makefile  README  isa-tazatel  isa-tazatel.cpp  output  xstepa61.tar  xstepa61.tar.xz
ITS/: README.md  add_user.feature  delete_user.feature  edit_user.feature  report.odt  requirements.txt
ITY/: Makefile
IZU/: test.pl
IZV/: analysis.py  doc.odt  doc.py  download.py  geo.py  get_stat.py
build-Chess-Desktop-Debug/: Makefile  moc_aboutdialog.cpp  moc_customtabwidget.cpp  moc_endgamedialog.cpp  moc_ioclass.cpp  moc_loaddialog.cpp  moc_mainwindow.cpp  moc_savedialog.cpp  qrc_resource.cpp  ui_aboutdialog.h  ui_customtabwidget.h  ui_endgamedialog.h  ui_loaddialog.h  ui_mainwindow.h  ui_savedialog.h
(+2462 files in other folders)
